--- a/index.html
+++ b/index.html
@@ -15,87 +15,203 @@
 
 <body>
 
-    <!-- HERO -->
+    <!-- SOFTWARE -->
 
     <div class="container-fluid hero">
         <div class="container">
             <div class="row justify-content-center align-items-center">
-                <div class="col-sm-12 col-md-5 col-lg-4">
+                <div class="col-sm-12 col-md-12 col-lg-12">
+                    <h4 class="start__h4">Chapaleufú Emprendimientos</h4>
                     <span class="hero__line--green"></span>
                     <h3 class="hero__h3">Software Agropecuario y Agrícola</h3>
                     <p class="hero__p">Solución de gestión integral para el sector agropecuario. Administra y gestiona
                         tus
                         producciones agrícolas</p>
                 </div>
-                <div class="col-sm-12 col-md-5 col-lg-4">
-                    <!-- Google Forms -->
+            </div>
+        </div>
+    </div>
+
+    <!-- FEATURES SOFTWARE -->
+
+    <div class="container-fluid features">
+        <div class="container">
+            <div class="row justify-content-center align-items-center features__row">
+                <div class="col-sm-12 col-md-12 col-lg-12 features__col1">
+                    <h3 class="features__h3">Conocé las funcionalidades del sistema:</h3>
+                </div>
+            </div>
+            <div class="row justify-content-center align-content-center">
+                <div class="col-sm-12 col-md-3 col-lg-3 features__col--cards">
+                    <img src="imagenes/features-icon-1.png" alt="" class="features__icon">
+                    <h4 class="features__h4-card">Labores y Costos</h4>
+                    <p class="features__p-card">Gestiona tus tareas dentro de un
+                        calendario. tus movimientos de stock
+                        se verán reflejados automáticamente
+                        al finalizar una labor.</p>
+                </div>
+                <div class="col-sm-12 col-md-3 col-lg-3 features__col--cards">
+                    <img src="imagenes/features-icon-2.png" alt="" class="features__icon">
+                    <h4 class="features__h4-card">Stock de Insumos</h4>
+                    <p class="features__p-card">Agrega fácilmente los datos de tus
+                        insumos y herramientas para
+                        supervisar tu stock de galpones y sus
+                        movimientos.</p>
+                </div>
+                <div class="col-sm-12 col-md-3 col-lg-3 features__col--cards">
+                    <img src="imagenes/features-icon-3.png" alt="" class="features__icon">
+                    <h4 class="features__h4-card">Mapa del campo</h4>
+                    <p class="features__p-card">Dibuja tus lotes y visualízalos desde
+                        nuestra plataforma. Obtiene una
+                        mejor organización conociendo el
+                        clima, el estado de tus lotes, el
+                        rendimiento de producción y sus
+                        cultivos.</p>
+                </div>
+                <div class="col-sm-12 col-md-3 col-lg-3 features__col--cards">
+                    <img src="imagenes/features-icon-4.png" alt="" class="features__icon">
+                    <h4 class="features__h4-card">Copiar labor</h4>
+                    <p class="features__p-card">Con tan solo un click puedes duplicar
+                        las tareas que realizas rutinariamente,
+                        pudiendo editar fecha, campo, lote,
+                        etc.</p>
+                </div>
+                <div class="col-sm-12 col-md-3 col-lg-3 features__col--cards">
+                    <img src="imagenes/features-icon-5.png" alt="" class="features__icon">
+                    <h4 class="features__h4-card">Ordenes de trabajo</h4>
+                    <p class="features__p-card">Puedes administrar tus ordenes de
+                        trabajo para contratistas a través del
+                        software.</p>
+                </div>
+            </div>
+            <div class="row justify-content-center align-content-center">
+                <div class="col-sm-12 col-md-12 col-lg-12 features__col--btn">
+                    <a href="#comenzar" class="features__btn">Comenzar</a>
                 </div>
             </div>
         </div>
     </div>
 
-    <!-- FEATURES -->
+    <!-- LOGISTIC -->
 
-    <div class="container-fluid">
+    <div class="container-fluid logistic">
         <div class="container">
-            <div class="row">
-                <div class="col-sm-12 col-md-3 col-lg-3">
-                    <div class="card" style="width: 18rem;">
-                        <img src="..." class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
-                        </div>
-                    </div>
+            <div class="row justify-content-center align-items-center">
+                <div class="col-sm-12 col-md-12 col-lg-12">
+                    <h4 class="start__h4">Chapaleufú Emprendimientos</h4>
+                    <span class="hero__line--green"></span>
+                    <h3 class="hero__h3">Servicio de logística</h3>
+                    <p class="hero__p">Solución de transporte de productos agrícolas.</p>
                 </div>
-                <div class="col-sm-12 col-md-3 col-lg-3">
-                    <div class="card" style="width: 18rem;">
-                        <img src="..." class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
-                        </div>
-                    </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- FEATURES LOGISTIC -->
+
+    <div class="container-fluid features">
+        <div class="container">
+            <div class="row justify-content-center align-items-center features__row">
+                <div class="col-sm-12 col-md-12 col-lg-12 features__col1">
+                    <h3 class="features__h3">Conocé las características del servicio:</h3>
                 </div>
-                <div class="col-sm-12 col-md-3 col-lg-3">
-                    <div class="card" style="width: 18rem;">
-                        <img src="..." class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
-                        </div>
-                    </div>
+            </div>
+            <div class="row justify-content-center align-content-center">
+                <div class="col-6 col-md-6 col-lg-4 features__col--cards">
+                    <img src="imagenes/checked.png" alt="" class="features__icon features__icon--logistic">
+                    <h4 class="features__h4-card features__h4-card--logistic">Reporte de posicion cada 1 minuto.</h4>
                 </div>
-                <div class="col-sm-12 col-md-3 col-lg-3">
-                    <div class="card" style="width: 18rem;">
-                        <img src="..." class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
-                        </div>
-                    </div>
+                <div class="col-6 col-md-6 col-lg-4 features__col--cards">
+                    <img src="imagenes/checked.png" alt="" class="features__icon features__icon--logistic">
+                    <h4 class="features__h4-card features__h4-card--logistic">Ubicacion en tiempo real.</h4>
                 </div>
+                <div class="col-6 col-md-6 col-lg-4 features__col--cards">
+                    <img src="imagenes/checked.png" alt="" class="features__icon features__icon--logistic">
+                    <h4 class="features__h4-card features__h4-card--logistic">Almacenamiento historico de recorridos.
+                    </h4>
+                </div>
+                <div class="col-6 col-md-6 col-lg-4 features__col--cards">
+                    <img src="imagenes/checked.png" alt="" class="features__icon features__icon--logistic">
+                    <h4 class="features__h4-card features__h4-card--logistic">Boton de panico y corte de corriente
+                        remoto.</h4>
+                </div>
+                <div class="col-6 col-md-6 col-lg-4 features__col--cards">
+                    <img src="imagenes/checked.png" alt="" class="features__icon features__icon--logistic">
+                    <h4 class="features__h4-card features__h4-card--logistic">Central de monitoreo 7 x 24</h4>
+                </div>
+                <div class="col-6 col-md-6 col-lg-4 features__col--cards">
+                    <img src="imagenes/checked.png" alt="" class="features__icon features__icon--logistic">
+                    <h4 class="features__h4-card features__h4-card--logistic">Acceso a seguimiento desde Web o App.</h4>
+                </div>
+                <div class="col-6 col-md-6 col-lg-4 features__col--cards">
+                    <img src="imagenes/checked.png" alt="" class="features__icon features__icon--logistic">
+                    <h4 class="features__h4-card features__h4-card--logistic">Certificaciones ISO 9001 Y CESVI.</h4>
+                </div>
+                <div class="col-6 col-md-6 col-lg-4 features__col--cards">
+                    <img src="imagenes/checked.png" alt="" class="features__icon features__icon--logistic">
+                    <h4 class="features__h4-card features__h4-card--logistic">Control de combustible.</h4>
+                </div>
+                <div class="col-6 col-md-6 col-lg-4 features__col--cards">
+                    <img src="imagenes/checked.png" alt="" class="features__icon features__icon--logistic">
+                    <h4 class="features__h4-card features__h4-card--logistic">App para seguimiento mobile</h4>
+                </div>
+                <div class="col-6 col-md-6 col-lg-4 features__col--cards">
+                    <img src="imagenes/checked.png" alt="" class="features__icon features__icon--logistic">
+                    <h4 class="features__h4-card features__h4-card--logistic">Zonas y rutas seguras.</h4>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- BENEFITS -->
+
+    <div class="container-fluid benefits">
+        <div class="row justify-content-center align-items-center">
+            <div class="col-sm-12 col-md-12 col-lg-12 benefits__col1">
+                <h4 class="benefits__h4">Mejorá costos, productividad y
+                    rentabilidad de tu compañía.</h4>
+                <a href="#comenzar" class="benefits__btn">Comenzar</a>
             </div>
         </div>
     </div>
 
     <!-- START -->
 
-    <div class="container-fluid start">
+    <div class="container-fluid start" id="comenzar">
         <div class="row">
-            <div class="col-sm-12 col-md-5 col-lg-4">
+            <div class="col-sm-12 col-md-12 col-lg-12 start__col1">
                 <h4 class="start__h4">Chapaleufú Emprendimientos</h4>
-                <span class="hero__line--green"></span>
                 <h3 class="start__h3">¿Comenzamos?</h3>
                 <p class="start__p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum recusandae labore ex
                     praesentium
                     asperiores, obcaecati optio consequuntur autem expedita a. Molestiae perspiciatis amet quis
                     voluptate neque atque quod ea ipsum?</p>
-                <button class="start__btn">Contacto</button>
+            </div>
+            <div class="col-sm-12 col-md-12 col-lg-12 start__col2">
+                <form action="" class="start__form">
+                    <fieldset>
+                        <input type="text" name="nombre" id="" class="form__input" placeholder="Nombre">
+                    </fieldset>
+                    <fieldset>
+                        <input type="text" name="apellido" id="" class="form__input" placeholder="Apellido">
+                    </fieldset>
+                    <fieldset>
+                        <input type="email" name="email" id="" class="form__input" placeholder="Email">
+                    </fieldset>
+                    <fieldset>
+                        <input type="text" name="telefono" id="" class="form__input" placeholder="Teléfono">
+                    </fieldset>
+                    <fieldset>
+                        <input type="text" name="empresa" id="" class="form__input" placeholder="Empresa">
+                    </fieldset>
+                    <fieldset>
+                        <textarea name="mensaje" id="" class="form__input form__input--mensaje" cols="10" rows="5"
+                            placeholder="Mensaje"></textarea>
+                    </fieldset>
+                    <fieldset>
+                        <input type="submit" value="Enviar" class="form__btn">
+                    </fieldset>
+                </form>
             </div>
             <div class="col-sm-12 col-md-5 col-lg-4">
                 <!-- Imagen -->
@@ -105,11 +221,14 @@
 
     <!-- FOOTER -->
 
-    <div class="container-fluid">
+    <div class="container-fluid footer">
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 col-md-12 col-lg-12">
-                    <h4>Desarrollada por Guinda Social Media</h4>
+                    <h4 class="footer__h4">Desarrollada por <a href="http://guindasocialmedia.com.ar/"
+                            target="_blank"><span class="footer__h4--guinda">Guinda Social
+                                Media</span></a>
+                    </h4>
                 </div>
             </div>
         </div>
