--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="container">
             <div class="row justify-content-center align-items-center">
                 <div class="col-sm-12 col-md-12 col-lg-12">
-                    <h4 class="start__h4">Chapaleufú Emprendimientos</h4>
+                    <h4 class="start__h4 hero__h4">Chapaleufú Emprendimientos</h4>
                     <span class="hero__line--green"></span>
                     <h3 class="hero__h3">Software Agropecuario y Agrícola</h3>
                     <p class="hero__p">Solución de gestión integral para el sector agropecuario. Administra y gestiona
@@ -41,8 +41,8 @@
                     <h3 class="features__h3">Conocé las funcionalidades del sistema:</h3>
                 </div>
             </div>
-            <div class="row justify-content-center align-content-center">
-                <div class="col-sm-12 col-md-3 col-lg-3 features__col--cards">
+            <div class="row justify-content-center align-content-center features__software__row">
+                <div class="col-sm-12 col-md-4 col-lg-4 features__col--cards features__col--cards--1">
                     <img src="imagenes/features-icon-1.png" alt="" class="features__icon">
                     <h4 class="features__h4-card">Labores y Costos</h4>
                     <p class="features__p-card">Gestiona tus tareas dentro de un
@@ -50,7 +50,7 @@
                         se verán reflejados automáticamente
                         al finalizar una labor.</p>
                 </div>
-                <div class="col-sm-12 col-md-3 col-lg-3 features__col--cards">
+                <div class="col-sm-12 col-md-4 col-lg-4 features__col--cards features__col--cards--2">
                     <img src="imagenes/features-icon-2.png" alt="" class="features__icon">
                     <h4 class="features__h4-card">Stock de Insumos</h4>
                     <p class="features__p-card">Agrega fácilmente los datos de tus
@@ -58,7 +58,7 @@
                         supervisar tu stock de galpones y sus
                         movimientos.</p>
                 </div>
-                <div class="col-sm-12 col-md-3 col-lg-3 features__col--cards">
+                <div class="col-sm-12 col-md-4 col-lg-4 features__col--cards features__col--cards--3">
                     <img src="imagenes/features-icon-3.png" alt="" class="features__icon">
                     <h4 class="features__h4-card">Mapa del campo</h4>
                     <p class="features__p-card">Dibuja tus lotes y visualízalos desde
@@ -68,7 +68,7 @@
                         rendimiento de producción y sus
                         cultivos.</p>
                 </div>
-                <div class="col-sm-12 col-md-3 col-lg-3 features__col--cards">
+                <div class="col-sm-12 col-md-4 col-lg-4 features__col--cards features__col--cards--4">
                     <img src="imagenes/features-icon-4.png" alt="" class="features__icon">
                     <h4 class="features__h4-card">Copiar labor</h4>
                     <p class="features__p-card">Con tan solo un click puedes duplicar
@@ -76,7 +76,7 @@
                         pudiendo editar fecha, campo, lote,
                         etc.</p>
                 </div>
-                <div class="col-sm-12 col-md-3 col-lg-3 features__col--cards">
+                <div class="col-sm-12 col-md-4 col-lg-4 features__col--cards features__col--cards--5">
                     <img src="imagenes/features-icon-5.png" alt="" class="features__icon">
                     <h4 class="features__h4-card">Ordenes de trabajo</h4>
                     <p class="features__p-card">Puedes administrar tus ordenes de
@@ -98,10 +98,10 @@
         <div class="container">
             <div class="row justify-content-center align-items-center">
                 <div class="col-sm-12 col-md-12 col-lg-12">
-                    <h4 class="start__h4">Chapaleufú Emprendimientos</h4>
-                    <span class="hero__line--green"></span>
-                    <h3 class="hero__h3">Servicio de logística</h3>
-                    <p class="hero__p">Solución de transporte de productos agrícolas.</p>
+                    <h4 class="start__h4 logistic__h4">Chapaleufú Emprendimientos</h4>
+                    <span class="hero__line--green hero__line--green--logistic"></span>
+                    <h3 class="hero__h3 logistic__h3">Servicio de logística</h3>
+                    <p class="hero__p logistic__p">Solución de transporte de productos agrícolas.</p>
                 </div>
             </div>
         </div>
@@ -113,49 +113,49 @@
         <div class="container">
             <div class="row justify-content-center align-items-center features__row">
                 <div class="col-sm-12 col-md-12 col-lg-12 features__col1">
-                    <h3 class="features__h3">Conocé las características del servicio:</h3>
+                    <h3 class="features__h3 features__h3__logistic">Conocé las características del servicio:</h3>
                 </div>
             </div>
             <div class="row justify-content-center align-content-center">
-                <div class="col-6 col-md-6 col-lg-4 features__col--cards">
+                <div class="col-6 col-md-6 col-lg-4 features__col--cards features__col--cards--logistic--1">
                     <img src="imagenes/checked.png" alt="" class="features__icon features__icon--logistic">
                     <h4 class="features__h4-card features__h4-card--logistic">Reporte de posicion cada 1 minuto.</h4>
                 </div>
-                <div class="col-6 col-md-6 col-lg-4 features__col--cards">
+                <div class="col-6 col-md-6 col-lg-4 features__col--cards features__col--cards--logistic--2">
                     <img src="imagenes/checked.png" alt="" class="features__icon features__icon--logistic">
                     <h4 class="features__h4-card features__h4-card--logistic">Ubicacion en tiempo real.</h4>
                 </div>
-                <div class="col-6 col-md-6 col-lg-4 features__col--cards">
+                <div class="col-6 col-md-6 col-lg-4 features__col--cards features__col--cards--logistic--3">
                     <img src="imagenes/checked.png" alt="" class="features__icon features__icon--logistic">
                     <h4 class="features__h4-card features__h4-card--logistic">Almacenamiento historico de recorridos.
                     </h4>
                 </div>
-                <div class="col-6 col-md-6 col-lg-4 features__col--cards">
+                <div class="col-6 col-md-6 col-lg-4 features__col--cards features__col--cards--logistic--4">
                     <img src="imagenes/checked.png" alt="" class="features__icon features__icon--logistic">
                     <h4 class="features__h4-card features__h4-card--logistic">Boton de panico y corte de corriente
                         remoto.</h4>
                 </div>
-                <div class="col-6 col-md-6 col-lg-4 features__col--cards">
+                <div class="col-6 col-md-6 col-lg-4 features__col--cards features__col--cards--logistic--5">
                     <img src="imagenes/checked.png" alt="" class="features__icon features__icon--logistic">
                     <h4 class="features__h4-card features__h4-card--logistic">Central de monitoreo 7 x 24</h4>
                 </div>
-                <div class="col-6 col-md-6 col-lg-4 features__col--cards">
+                <div class="col-6 col-md-6 col-lg-4 features__col--cards features__col--cards--logistic--6">
                     <img src="imagenes/checked.png" alt="" class="features__icon features__icon--logistic">
                     <h4 class="features__h4-card features__h4-card--logistic">Acceso a seguimiento desde Web o App.</h4>
                 </div>
-                <div class="col-6 col-md-6 col-lg-4 features__col--cards">
+                <div class="col-6 col-md-6 col-lg-4 features__col--cards features__col--cards--logistic--7">
                     <img src="imagenes/checked.png" alt="" class="features__icon features__icon--logistic">
                     <h4 class="features__h4-card features__h4-card--logistic">Certificaciones ISO 9001 Y CESVI.</h4>
                 </div>
-                <div class="col-6 col-md-6 col-lg-4 features__col--cards">
+                <div class="col-6 col-md-6 col-lg-4 features__col--cards features__col--cards--logistic--8">
                     <img src="imagenes/checked.png" alt="" class="features__icon features__icon--logistic">
                     <h4 class="features__h4-card features__h4-card--logistic">Control de combustible.</h4>
                 </div>
-                <div class="col-6 col-md-6 col-lg-4 features__col--cards">
+                <div class="col-6 col-md-6 col-lg-4 features__col--cards features__col--cards--logistic--9">
                     <img src="imagenes/checked.png" alt="" class="features__icon features__icon--logistic">
                     <h4 class="features__h4-card features__h4-card--logistic">App para seguimiento mobile</h4>
                 </div>
-                <div class="col-6 col-md-6 col-lg-4 features__col--cards">
+                <div class="col-6 col-md-6 col-lg-4 features__col--cards features__col--cards--logistic--10">
                     <img src="imagenes/checked.png" alt="" class="features__icon features__icon--logistic">
                     <h4 class="features__h4-card features__h4-card--logistic">Zonas y rutas seguras.</h4>
                 </div>
@@ -188,7 +188,7 @@
                     voluptate neque atque quod ea ipsum?</p>
             </div>
             <div class="col-sm-12 col-md-12 col-lg-12 start__col2">
-                <form action="" class="start__form">
+                <form action="form.php" method="POST" class="start__form">
                     <fieldset>
                         <input type="text" name="nombre" id="" class="form__input" placeholder="Nombre">
                     </fieldset>
@@ -233,6 +233,13 @@
             </div>
         </div>
     </div>
+
+    <!-- jQuery -->
+
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+
+    <script src="js/app.js"></script>
 
 </body>
 
