--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <div class="row justify-content-center align-items-center features__row">
                 <div class="col-sm-12 col-md-12 col-lg-12 features__col1">
                     <h3 class="features__h3">Conocé las funcionalidades del sistema:</h3>
+                    <img src="imagenes/minus.png" alt="">
                 </div>
             </div>
             <div class="row justify-content-center align-content-center features__software__row">
@@ -114,6 +115,7 @@
             <div class="row justify-content-center align-items-center features__row">
                 <div class="col-sm-12 col-md-12 col-lg-12 features__col1">
                     <h3 class="features__h3 features__h3__logistic">Conocé las características del servicio:</h3>
+                    <img src="imagenes/minus.png" alt="">
                 </div>
             </div>
             <div class="row justify-content-center align-content-center">
@@ -180,12 +182,9 @@
     <div class="container-fluid start" id="comenzar">
         <div class="row">
             <div class="col-sm-12 col-md-12 col-lg-12 start__col1">
-                <h4 class="start__h4">Chapaleufú Emprendimientos</h4>
+                <h4 class="start__h4 start__h4--animated">Chapaleufú Emprendimientos</h4>
                 <h3 class="start__h3">¿Comenzamos?</h3>
-                <p class="start__p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum recusandae labore ex
-                    praesentium
-                    asperiores, obcaecati optio consequuntur autem expedita a. Molestiae perspiciatis amet quis
-                    voluptate neque atque quod ea ipsum?</p>
+                <p class="start__p">Envianos tu consulta y te contestaremos a la brevedad.</p>
             </div>
             <div class="col-sm-12 col-md-12 col-lg-12 start__col2">
                 <form action="form.php" method="POST" class="start__form">
