--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="row justify-content-center align-items-center features__row">
                 <div class="col-sm-12 col-md-12 col-lg-12 features__col1">
                     <h3 class="features__h3">Conocé las funcionalidades del sistema:</h3>
-                    <img src="imagenes/minus.png" alt="">
+                    <img src="imagenes/minus.png" alt="line" class="features__h3__line">
                 </div>
             </div>
             <div class="row justify-content-center align-content-center features__software__row">
@@ -115,7 +115,7 @@
             <div class="row justify-content-center align-items-center features__row">
                 <div class="col-sm-12 col-md-12 col-lg-12 features__col1">
                     <h3 class="features__h3 features__h3__logistic">Conocé las características del servicio:</h3>
-                    <img src="imagenes/minus.png" alt="">
+                    <img src="imagenes/minus.png" alt="line" class="features__h3__line--logistic">
                 </div>
             </div>
             <div class="row justify-content-center align-content-center">
